tests/ui/missing_return.stderr
Error [E0114]: `sign` promises to return Int (a whole number), but a path can reach the end without `return`
  --> tests/ui/missing_return.lex:1:4
    |
  1 | fn sign(n: Int) -> Int {
    |    ^^^^
 Why: every way through the function must hand back a value
 Fix: add a final `return ...;`, or an `else` branch that returns
