tests/ui/missing_return.jet
fn sign(n: Int) -> Int {
    if n > 0 {
        return 1;
    }
}

fn main() {
    print(sign(5));
}
